test/types/range/vass/slice-of-unaligned-1.chpl
// Slicing where the first range is unaligned is not allowed.

writeln( (1.. by -2) [..6] );
